# path-tracer

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: geometry.rs  lib.rs  main.rs  material.rs  math.rs  ray.rs  renderable.rs  scene.rs  vec3d.rs
src/path_tracer/: mod.rs  ray.rs
