[package]
name = "path_tracer"
version = "0.1.0"
description = "Path tracer"
license = "MIT"
authors = ["Matt Godbolt <matt@godbolt.org>"]
repository = "https://github.com/mattgodbolt/path-tracer.git"
readme = "README.md"

[dependencies]
argparse = "*"
image = "0.3"
num_cpus = "0.2"
rand = "0.3"
threadpool = "0.1"

[profile.release]
lto = true
